[gd_scene load_steps=5 format=3 uid="uid://d1xcintysbmv4"]

[ext_resource type="Script" path="res://scenes/exercise_time/exercise_time_script.gd" id="1_vibgd"]
[ext_resource type="Theme" uid="uid://d24s1qif08h56" path="res://themes/light_theme.tres" id="3_dp3e7"]
[ext_resource type="PackedScene" uid="uid://cmj3rhes5epv5" path="res://prefab/background.tscn" id="3_niqdi"]
[ext_resource type="AudioStream" uid="uid://c4mmhy14gs7ha" path="res://sounds/gentle_fields_trilha.mp3" id="4_a2en5"]

[node name="Exercice_Time_Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vibgd")

[node name="musica_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a2en5")
volume_db = -10.0
autoplay = true

[node name="Background" parent="." instance=ExtResource("3_niqdi")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 20
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PIN" type="LineEdit" parent="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dp3e7")
placeholder_text = "PIN"

[node name="Error_message" type="Label" parent="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dp3e7")
theme_type_variation = &"ErrorMessage"

[node name="Tempo" type="LineEdit" parent="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_dp3e7")
placeholder_text = "Tempo (Em minutos)"
virtual_keyboard_type = 2

[node name="Error_Time_Message" type="Label" parent="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dp3e7")
theme_type_variation = &"ErrorMessage"

[node name="Button" type="Button" parent="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_dp3e7")
text = "Voltar ao Jogo"

[connection signal="pressed" from="Background/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
